# scrot

./: Makefile.am  Makefile.in  README  aclocal.m4  configure
debian/: README.Debian  changelog  control  copyright  rules  watch
debian/patches/: 003_descmanpage.dpatch  00list  01_manpagefix.dpatch  02_options.c.dpatch  05-addfocusedmanpage.dpatch  06_manpagespace.dpatch  07_fix-formatstring.dpatch  08_fix-beeping.dpatch  09_fix-minusign.dpatch  10_improve-hardening.patch  11_fix-spelling-manpage.patch  series
debian/source/: include-binaries
src/: Makefile.am  Makefile.in  main.c  options.c  options.h  scrot.h
